--- a/index.html
+++ b/index.html
@@ -179,41 +179,41 @@
         
         <div class="input-section">
             <div class="input-group">
-                <label for="valsdes">Valor da parcela SEM desconto (Valor Cheio):</label>
+                <label for="valsdes">Valor da parcela sem desconto:</label>
                 <input type="number" id="valsdes" placeholder="Ex: 1000.00" step="0.01" required>
             </div>
             <div class="input-group">
-                <label for="valdparl">Valor da Parcela Leve (primeiros meses):</label>
+                <label for="valdparl">Valor da parcela leve:</label>
                 <input type="number" id="valdparl" placeholder="Ex: 200.00" step="0.01" required>
             </div>
             <div class="input-group">
-                <label for="quantparc">Quantidade de Parcelas Leves (1, 2 ou 3):</label>
+                <label for="quantparc">Quantidade de Parcelas Leves (1 a 3):</label>
                 <input type="number" id="quantparc" placeholder="Ex: 2" min="1" max="3" required>
             </div>
             <div class="input-group">
-                <label for="durdanos">Duração do curso em ANOS:</label>
+                <label for="durdanos">Duração do curso em anos:</label>
                 <input type="number" id="durdanos" placeholder="Ex: 2" min="0.5" step="0.5" required>
             </div>
             <div class="input-group">
-                <label for="valdpcd">Valor da Parcela com Desconto BASE:</label>
+                <label for="valdpcd">Valor da Parcela com Desconto:</label>
                 <input type="number" id="valdpcd" placeholder="Ex: 700.00" step="0.01" required>
             </div>
             <div class="input-group">
-                <label for="valdpdif">Valor da Parcela com Desconto MUDANÇA (Opcional):</label>
+                <label for="valdpdif">Valor da Parcela com Desconto em mês seguinte (Se houver):</label>
                 <input type="number" id="valdpdif" placeholder="Ex: 750.00 (deixe em branco se não houver)" step="0.01">
             </div>
             <div class="input-group">
-                <label for="mesmudanca">Mês de Início da Mudança de Parcela (Opcional):</label>
+                <label for="mesmudanca">Mês da parcela do mês seguinte (Se houver):</label>
                 <input type="number" id="mesmudanca" placeholder="Ex: 13 (deixe em branco se não houver mudança)" min="2">
             </div>
             
-            <button onclick="calcularValores()">Calcular Parcelas</button>
+            <button onclick="calcularValores()">Calcular</button>
         </div>
 
         <div class="result-section">
             <div id="result">
                 <h2>Resultados do Cálculo</h2>
-                <p>Preencha os campos e clique em "Calcular Parcelas" para ver os resultados aqui.</p>
+                <p>Preencha os campos e clique em "Calcular" para ver os resultados aqui.</p>
             </div>
         </div>
     </div>
