--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 let descricaoPeriodo = `${inicioNormal}° mês até o ${fimTotal}° mês aproximadamente`;
                 let valorFormatado = valorParcelaNormal.toFixed(2).replace('.', ',');
 
-                htmlContent += `<li><strong>${descricaoPeriodo}</strong>: Parcela com descon + Parcela Leve diluída`;
+                htmlContent += `<li><strong>${descricaoPeriodo}</strong>: Parcela com desconto + Parcela Leve diluída`;
                 htmlContent += `<span>Valor: R$ ${valorFormatado} + Reajuste anual</span></li>`;
 
             } else {
