--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@
                 <input type="number" id="valdpcd" placeholder="Ex: 700,00" step="0.01" required>
             </div>
             <div class="input-group">
-                <label for="valdpdif">Valor da Parcela com Desconto em mês seguinte (Se houver):</label>
+                <label for="valdpdif">Valor da Parcela com desconto em mês seguinte (Se houver):</label>
                 <input type="number" id="valdpdif" placeholder="Ex: 750,00 (deixe em branco se não houver)" step="0.01">
             </div>
             <div class="input-group">
-                <label for="mesmudanca">Mês da parcela do mês seguinte (Se houver):</label>
-                <input type="number" id="mesmudanca" placeholder="Ex: 13 (deixe em branco se não houver mudança)" min="2">
+                <label for="mesmudanca">Valor da parcela do mês seguinte (Se houver):</label>
+                <input type="number" id="mesmudanca" placeholder="Ex: 7" min="2">
             </div>
             
             <button onclick="calcularValores()">Calcular</button>
