--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Valores de Curso</title>
+    <title>Calculadora de Parcelas Leves</title>
     <style>
         /* Estilos CSS (Sem Alteração) */
         body {
@@ -200,7 +200,7 @@
             </div>
             <div class="input-group">
                 <label for="valdpdif">Valor da Parcela com desconto em mês seguinte (Se houver):</label>
-                <input type="number" id="valdpdif" placeholder="Ex: 750,00 (deixe em branco se não houver)" step="0.01">
+                <input type="number" id="valdpdif" placeholder="Ex: 750,00" step="0.01">
             </div>
             <div class="input-group">
                 <label for="mesmudanca">Valor da parcela do mês seguinte (Se houver):</label>
