--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <input type="number" id="valdpdif" placeholder="Ex: 750,00" step="0.01">
             </div>
             <div class="input-group">
-                <label for="mesmudanca">Valor da parcela do mês seguinte (Se houver):</label>
+                <label for="mesmudanca">Mês que a parcela sofre alteração (Se houver):</label>
                 <input type="number" id="mesmudanca" placeholder="Ex: 7" min="2">
             </div>
             
