--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Parcelas Leves</title>
+    <title>Diluií</title>
     <style>
         /* Estilos CSS (Sem Alteração) */
         body {
