--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora de Valores de Curso</h1>
+        <h1>Diluií</h1>
         
         <div class="input-section">
             <div class="input-group">
