--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <body>
     <div class="container">
         <h1>Diluií</h1>
-        <h6>Criado para descomplicar a nossa vida e a do cliente, tornando o cálculo da diluição de valores mais rápido e seguro. - Dalati Lacerda (Operador)</h6>
+        <h5>Criado para descomplicar a nossa vida e a do cliente, tornando o cálculo da diluição de valores mais rápido e seguro.<br> Por Dalati Lacerda (Operador)</h5>
         
         <div class="input-section">
             <div class="input-group">
