--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <body>
     <div class="container">
         <h1>Diluií</h1>
-        <h5>Criado para descomplicar a nossa vida e a do cliente, tornando o cálculo da diluição de valores mais rápido e seguro.<br><br>
+        <h5>Criado para descomplicar a nossa vida e a do candidato, tornando o cálculo da diluição de valores mais rápido e seguro.<br><br>
 Obs: O uso desta ferramenta não substitui o conhecimento do cálculo manual. Esteja sempre preparado para realizar a conta caso haja instabilidade.<br><br>
 Por Dalati Lacerda (Operador)</h5>
         
