--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Por Dalati Lacerda (Operador)</h5>
         
         <div class="input-section">
             <div class="input-group">
-                <label for="valsdes">Valor da parcela sem desconto:</label>
+                <label for="valsdes">Informe o valor cheio (sem desconto):</label>
                 <input type="number" id="valsdes" placeholder="Ex: 1.000,00" step="0.01" required>
             </div>
             <div class="input-group">
