--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Por Dalati Lacerda (Operador)</h5>
         <div class="input-section">
             <div class="input-group">
                 <label for="valsdes">Informe o valor cheio (sem desconto):</label>
-                <input type="number" id="valsdes" placeholder="R$ 1.389,98" step="0.01" required>
+                <input type="number" id="valsdes" placeholder="ex: R$ 1.389,98" step="0.01" required>
             </div>
             <div class="input-group">
                 <label for="valdparl">Valor da parcela leve:</label>
