--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@ Por Dalati Lacerda (Operador)</h5>
                 <input type="number" id="valsdes" placeholder="EX: R$ 1.389,98" step="0.01" required>
             </div>
             <div class="input-group">
-                <label for="valdparl">Valor da parcela leve:</label>
-                <input type="number" id="valdparl" placeholder="Ex: 59,00" step="0.01" required>
+                <label for="valdparl">informe o valor da parcela leve:</label>
+                <input type="number" id="valdparl" placeholder="EX: R$79,00" step="0.01" required>
             </div>
             <div class="input-group">
-                <label for="quantparc">Quantidade de Parcelas Leves (1 a 3):</label>
-                <input type="number" id="quantparc" placeholder="Ex: 2" min="1" max="3" required>
+                <label for="quantparc">Informe a quantidade de parcela leve (1 a 3):</label>
+                <input type="number" id="quantparc" placeholder="EX: 2" min="1" max="3" required>
             </div>
             <div class="input-group">
                 <label for="durdanos">Duração do curso em anos:</label>
