--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@ Por Dalati Lacerda (Operador)</h5>
                 <input type="number" id="quantparc" placeholder="EX: 2" min="1" max="3" required>
             </div>
             <div class="input-group">
-                <label for="durdanos">Duração do curso em anos:</label>
-                <input type="number" id="durdanos" placeholder="Ex: 2" min="0.5" step="0.5" required>
+                <label for="durdanos">Informe a duração do curso (em anos):</label>
+                <input type="number" id="durdanos" placeholder="EX: 4" min="0.5" step="0.5" required>
             </div>
             <div class="input-group">
-                <label for="valdpcd">Valor da Parcela com Desconto:</label>
-                <input type="number" id="valdpcd" placeholder="Ex: 700,00" step="0.01" required>
+                <label for="valdpcd">Informe o valor (com desconto padrão):</label>
+                <input type="number" id="valdpcd" placeholder="EX: R$453,79" step="0.01" required>
             </div>
             <div class="input-group">
                 <label for="valdpdif">Valor da Parcela com desconto em mês seguinte (Se houver):</label>
