--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Por Dalati Lacerda (Operador)</h5>
         <div class="input-section">
             <div class="input-group">
                 <label for="valsdes">Informe o valor cheio (sem desconto):</label>
-                <input type="number" id="valsdes" placeholder="EX: R$ 1.389,98" step="0.01" required>
+                <input type="number" id="valsdes" placeholder="EX: R$1.389,98" step="0.01" required>
             </div>
             <div class="input-group">
                 <label for="valdparl">informe o valor da parcela leve:</label>
@@ -202,12 +202,12 @@ Por Dalati Lacerda (Operador)</h5>
                 <input type="number" id="valdpcd" placeholder="EX: R$453,79" step="0.01" required>
             </div>
             <div class="input-group">
-                <label for="valdpdif">Valor da Parcela com desconto em mês seguinte (Se houver):</label>
-                <input type="number" id="valdpdif" placeholder="Ex: 750,00" step="0.01">
+                <label for="valdpdif">Informe o segundo valor com desconto padrão (se houver):</label>
+                <input type="number" id="valdpdif" placeholder="EX: R$454,00" step="0.01">
             </div>
             <div class="input-group">
-                <label for="mesmudanca">Mês que a parcela sofre alteração (Se houver):</label>
-                <input type="number" id="mesmudanca" placeholder="Ex: 7" min="2">
+                <label for="mesmudanca">Informe o mês que a parcela sofre alteração (se houver):</label>
+                <input type="number" id="mesmudanca" placeholder="EX: 7°" min="2">
             </div>
             
             <button onclick="calcularValores()">Calcular</button>
