--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Por Dalati Lacerda (Operador)</h5>
                 <input type="number" id="valsdes" placeholder="EX: R$1.389,98" step="0.01" required>
             </div>
             <div class="input-group">
-                <label for="valdparl">informe o valor da parcela leve:</label>
+                <label for="valdparl">Informe o valor da parcela leve:</label>
                 <input type="number" id="valdparl" placeholder="EX: R$79,00" step="0.01" required>
             </div>
             <div class="input-group">
@@ -215,7 +215,7 @@ Por Dalati Lacerda (Operador)</h5>
 
         <div class="result-section">
             <div id="result">
-                <h2>Resultados do Cálculo</h2>
+                <h2>Resultados</h2>
                 <p>Preencha os campos e clique em "Calcular" para ver os resultados aqui.</p>
             </div>
         </div>
