--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Por Dalati Lacerda (Operador)</h5>
 
             // --- Exibição dos Resultados ---
             
-            let htmlContent = '<h2>Resultados do Cálculo</h2>';
+            let htmlContent = '<h2>Resultados</h2>';
             htmlContent += `<p><strong>Duração Total do Curso:</strong> ${parseInt(durMesesTotal)} meses</p>`;
             htmlContent += `<p><strong>Valor diluído em parcelas:</strong> R$ ${compensacaoMensal.toFixed(2).replace('.', ',')}</p>`;
 
