--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ Por Dalati Lacerda (Operador)</h5>
             // --- Exibição dos Resultados ---
             
             let htmlContent = '<h2>Resultados</h2>';
-            htmlContent += `<p><strong>Duração Total do Curso:</strong> ${parseInt(durMesesTotal)} meses</p>`;
+            htmlContent += `<p><strong>Duração do curso em meses:</strong> ${parseInt(durMesesTotal)} meses</p>`;
             htmlContent += `<p><strong>Valor diluído em parcelas:</strong> R$ ${compensacaoMensal.toFixed(2).replace('.', ',')}</p>`;
 
             htmlContent += '<h3>Parcelas detalhadas:</h3>';
