--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ Por Dalati Lacerda (Operador)</h5>
 
             // 1. Parcela Leve
             const pluralLeve = quantparc > 1 ? 'Parcelas Leves' : 'Parcela Leve';
-            const mesesLeve = quantparc > 1 ? `1° ao ${quantparc}° mês` : `1° mês`;
+            const mesesLeve = quantparc > 1 ? `do 1° ao ${quantparc}° mês` : `1° mês`;
 
             htmlContent += `<li><strong>${mesesLeve}</strong>: ${pluralLeve}`;
             htmlContent += `<span>Valor: R$ ${valdparl.toFixed(2).replace('.', ',')}</span></li>`;
