--- a/index.html
+++ b/index.html
@@ -304,10 +304,10 @@ Por Dalati Lacerda (Operador)</h5>
                 // CASO 1: SEM MUDANÇA (valdpdif = null)
                 
                 const fimTotal = parseInt(durMesesTotal);
-                let descricaoPeriodo = `do ${inicioNormal}° ao ${fimTotal}° mês aproximadamente`;
+                let descricaoPeriodo = `${inicioNormal}° mês até o ${fimTotal}° mês aproximadamente`;
                 let valorFormatado = valorParcelaNormal.toFixed(2).replace('.', ',');
 
-                htmlContent += `<li><strong>${descricaoPeriodo}</strong>: Parcela com desconto + Parcela Leve diluída`;
+                htmlContent += `<li><strong>${descricaoPeriodo}</strong> Parcela com desconto + Parcela Leve diluída`;
                 htmlContent += `<span>Valor: R$ ${valorFormatado} + Reajuste anual</span></li>`;
 
             } else {
