--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ Por Dalati Lacerda (Operador)</h5>
                     let descricaoPeriodo1 = `${inicioNormal}° mês até o ${mesFimPrimeiroPeriodo}° mês aproximadamente`;
                     let valorFormatado1 = valorParcelaNormal.toFixed(2).replace('.', ',');
                     
-                    htmlContent += `<li><strong>${descricaoPeriodo1}</strong> Parcela com desconto padrão + Diluição`;
+                    htmlContent += `<li><strong>${descricaoPeriodo1}</strong> Desconto padrão + Diluição (Parcela)`;
                     htmlContent += `<span>Valor: R$ ${valorFormatado1}</span></li>`;
                 }
 
