--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ Por Dalati Lacerda (Operador)</h5>
                 
                 let descricaoPeriodo2 = `${inicioSegundoPeriodo}° mês até o ${fimSegundoPeriodo}° mês aproximadamente`;
 
-                htmlContent += `<li><strong>${descricaoPeriodo2}</strong>: Parcela com Desconto + valor de parcela leve`;
+                htmlContent += `<li><strong>${descricaoPeriodo2}</strong>: Desconto padrão + Diluição (Parcela)`;
                 htmlContent += `<span>Valor: R$ ${valorFormatado2} + Reajuste anual</span></li>`;
             }
             
