--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ Por Dalati Lacerda (Operador)</h5>
                 let fimSegundoPeriodo = parseInt(durMesesTotal);
                 let valorFormatado2 = valorParcelaMudanca.toFixed(2).replace('.', ',');
                 
-                let descricaoPeriodo2 = `${inicioSegundoPeriodo}° mês até o ${fimSegundoPeriodo}° mês aproximadamente`;
+                let descricaoPeriodo2 = `do ${inicioSegundoPeriodo}° mês ao fim do curso aproximadamente`;
 
                 htmlContent += `<li><strong>${descricaoPeriodo2}</strong>: Desconto padrão + Diluição (Parcela 2)`;
                 htmlContent += `<span>Valor: R$ ${valorFormatado2} + Reajuste anual</span></li>`;
