--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <link rel="icon" type="image/png" href="<link rel="https://img.icons8.com/?size=100&id=EtlPmfgnN7sW&format=png&color=000000">
+    <link rel="icon" type="image/png" href="<link rel="https://raw.githubusercontent.com/dalatilacerda/ParcLeve/refs/heads/main/icons8-ponto-de-interroga%C3%A7%C3%A3o-stickers-96.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diluií</title>
