--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/dalatilacerda/ParcLeve/refs/heads/main/icons8-ponto-de-interroga%C3%A7%C3%A3o-stickers-96.png">
+    <link rel="icon" href="icons8-ponto-de-interrogação-stickers-96.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diluií</title>
